# jaraco-jaraco.functools

./: pyproject.toml  python-jaraco.functools.spec  setup.cfg
debian/: .gitignore  changelog  control  python3-jaraco.functools.lintian-overrides
debian/source/: lintian-overrides
