[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jaraco.functools"
version = "4.0.1"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Functools like those found in stdlib"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
	"more_itertools",
]

[project.urls]
Homepage = "https://github.com/jaraco/jaraco.functools"

[project.optional-dependencies]
testing = [
	# upstream
	"pytest >= 6",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	'pytest-mypy; python_implementation != "PyPy"', # workaround for jaraco/skeleton#22
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1",

	# local
	"jaraco.classes",
]
docs = [
	# upstream
	"sphinx >= 3.5",
	# workaround for sphinx/sphinx-doc#11662
	"sphinx < 7.2.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# tidelift
	"jaraco.tidelift >= 1.4",

	# local
]
